Fix after image stretching: add background-repeat:no-repeat and background-position:center

--- a/styles/glass-site.css
+++ b/styles/glass-site.css
@@ -468,12 +468,16 @@ details.faq-item{
 .compare-before-bg{
   background-image:url(/images/hose-bib-before.jpg);
   background-size:cover;
+  background-repeat:no-repeat;
+  background-position:center;
   position:absolute;
   inset:0;
 }
 .compare-after-bg{
   background-image:url(/images/hose-bib-after.jpg);
   background-size:cover;
+  background-repeat:no-repeat;
+  background-position:center;
   position:absolute;
   top:0;bottom:0;left:0;
   width:50%;
